# diabetes_tracker

./: .env.example  .flake8  .gitignore  Makefile  Project_Plan.md  README.md  app.py  debug_test.py  main.py  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  test_app.py
.github/workflows/: ci.yml  docs.yml  flake8.yml  ruff.yml
archive/: diagnose_db_connection.py  fix_db_permissions.py  migrate_csv_to_db.py  recreate_tables.py  test_db_connection.py  test_gpt_integration.py
data/: diabetes_entries.csv  users.csv
docs/: README.md  index.md  overview.md
docs/api/: ai_recommendations.md  app.md  auth.md  database.md  unit_converter.md
modules/: __init__.py  ai_recommendations.py  auth.py  database.py
setup/: GPT_API_SETUP.md  postgresql_setup_guide.md  setup_api_key.py
src/diabetes_tracker/: __init__.py  app.py  init_db.py
src/diabetes_tracker/modules/: __init__.py  ai_recommendations.py  auth.py  database.py  unit_converter.py
src/diabetes_tracker/static/css/: style.css
src/diabetes_tracker/static/js/: app.js
src/diabetes_tracker/templates/: index.html
static/css/: style.css
static/js/: app.js
templates/: index.html
tests/: README.md  run_tests.py  test_app.py  test_chart.py
